--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,39 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    
+    <nav class="container-xl p-3 mb-2 bg-info text-dark text-center fs-2">Team Generator</nav>
+    <div class="container-lg">
+        <div class="row">
+          <div class="col container-md bg-primary">
+            <section>Name:</section>
+            <section>ID:</section>
+            <section>Email:</section>
+            <section>Office Number:</section>
+          </div>
+          <div class="col container-md bg-secondary">
+            <section>Name:</section>
+            <section>ID:</section>
+            <section>Email:</section>
+            <section>Office Number:</section>
+          </div>
+          <div class="col container-md bg-info">
+            <section>Name:</section>
+            <section>ID:</section>
+            <section>Email:</section>
+            <section>Office Number:</section>
+          </div>
+        </div>
+      </div>
+
+      <footer></footer>
+
 </body>
 </html>
